# URC-Intelligence-Team-2025

./: README.md
aruco_ros/: README.txt  package.xml  setup.py
aruco_ros/aruco_ros/: aruco_node.py
aruco_ros/aruco_ros/test/: test1.py  test2.py  test3.py  test4.py  test5.py  test6.py  test7.py
aruco_ros_msgs/: CMakeLists.txt  README.txt  package.xml
aruco_ros_msgs/msg/: ArucoTag.msg
urc_sim/: README.txt  package.xml  setup.cfg  setup.py
urc_sim/config/: rover_primal_bl.yaml  rover_primal_br.yaml  rover_primal_fl.yaml  rover_primal_fr.yaml
urc_sim/launch/: urc_sim_demo1_launch.py  urc_sim_demo2_launch.py  urc_sim_demo3_launch.py  urc_sim_gazebo_launch.py  urc_sim_launch.py  urc_slam_launch.py  urc_test_launch.py
urc_sim/meshes/: 2020-extrusion-right.stl  Honeycomb-wheel-right.stl  Suspension-Bar.stl  kp-10mm-pillow-bearing-.stl
urc_sim/models/arucotag1/: model.config  model.sdf
urc_sim/models/arucotag1/materials/scripts/: aruco_tag.material
urc_sim/models/desert/: model.config  model.sdf
urc_sim/models/desert/materials/scripts/: desert.material
urc_sim/models/rover/: model.config  model.sdf
urc_sim/models/rover_primal/: model.config  model.sdf
urc_sim/urdf/: demo_block.xacro.urdf  demo_block2.xacro.urdf  demo_block3.sdf  demo_block3.xacro.urdf  demo_block4.sdf  demo_block4.xacro.urdf  rover_primal.xacro.urdf  rover_v1.urdf  rover_v1.xacro.urdf
urc_sim/world/: desert.world  empty_world.world  rover_primal.world
