<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>aruco_ros</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="prestonottsuperluminal@gmail.com">preston</maintainer>
  <license>TODO: License declaration</license>
  
     
  <!--build dependencies for ros2 msg files-->   
  <build_depend>rosidl_default_generators</build_depend>
  <exec_depend>rosidl_default_runtime</exec_depend>
  <member_of_group>rosidl_interface_packages</member_of_group>
  
  <!--dependency for aruco msgs-->
  <build_depend>aruco_ros_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  
  <!--ros package depends on cv_bridge for images-->
  <exec_depend>cv_bridge</exec_depend>
  <build_depend>cv_bridge</build_depend>
    

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
